<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sobre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="canatustecnologia.com.br.jokenpo.SobreActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_sobre"
        android:textSize="36dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_ir_para_jogo"
        android:text="@string/ir_para_jogo_sobre"
        android:onClick="onClickButtonIrParaJogo"/>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/button_ir_para_principal"
    android:text="@string/ir_para_principal_sobre"/>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/button_ir_para_mais_informacoes"
    android:text="@string/mais_informacoes_sobre"
        android:onClick="onClickButtonIrParaWikipedia"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_ir_para_ligar_desenvolvedor"
        android:text="@string/ligar_para_o_desenvolverdor_sobre"
        android:onClick="onClickButtonLigarParaDesenvolvedor"/>

</LinearLayout>
